--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
     <div class="container-fluid maxwidth">
         <div style="height: 448px;" class="row">
             <div class="col-2 d-flex flex-column">
-                <div style="height: 40px;">
+                <div style="height: 40px; text-align: center; background: red; color: white;">
                     <a href="#">Máy lọc nước Hydrogen</a>
                 </div>
                 <div>
@@ -498,8 +498,8 @@
                         </a>
                     </div>
                 </div>
-                <div>
-                    <ul class="pl-0">
+                <div class="h-100">
+                    <ul class="pl-0 d-flex flex-column h-100 justify-content-between align-items-center ">
                         <li>
                             <a href="">Lõi lọc nước</a>
                         </li>
@@ -531,8 +531,10 @@
             <div class="col-7 d-flex px-0">
                 <div style="height: 448px;" class="row">
                     <div class="col-4 d-flex flex-column">
-                        <div style="max-height: 224px; border: 1px solid #e0e0e0;"  class="d-flex flex-column justify-content-center align-items-center">
-                            <a style="text-align: center; font-size: 13px; font-weight: bold" href="">Máy lọc nước Kangaroo Hydrogen KG100HC vỏ tủ VTU</a>
+                        <div style="max-height: 224px; border: 1px solid #e0e0e0;"
+                            class="d-flex flex-column justify-content-center align-items-center">
+                            <a style="text-align: center; font-size: 13px; font-weight: bold" href="">Máy lọc nước
+                                Kangaroo Hydrogen KG100HC vỏ tủ VTU</a>
                             <a href="">
                                 <img style="height: 134px;" src="./images/sanpham1.jpg" alt="">
                             </a>
@@ -541,8 +543,10 @@
                                 <del class="float-left">11.500.000₫</del>
                             </div>
                         </div>
-                        <div style="max-height: 224px; border: 1px solid #e0e0e0;"  class="d-flex flex-column justify-content-center align-items-center">
-                            <a style="text-align: center; font-size: 13px; font-weight: bold" href="">Máy lọc nước Kangaroo Hydrogen KG100HC vỏ tủ VTU</a>
+                        <div style="max-height: 224px; border: 1px solid #e0e0e0;"
+                            class="d-flex flex-column justify-content-center align-items-center">
+                            <a style="text-align: center; font-size: 13px; font-weight: bold" href="">Máy lọc nước
+                                Kangaroo Hydrogen KG100HC vỏ tủ VTU</a>
                             <a href="">
                                 <img style="height: 134px;" src="./images/sanpham1.jpg" alt="">
                             </a>
@@ -553,8 +557,10 @@
                         </div>
                     </div>
                     <div class="col-4 d-flex flex-column">
-                        <div style="max-height: 224px;"  class="d-flex flex-column justify-content-center align-items-center">
-                            <a style="text-align: center; font-size: 13px; font-weight: bold" href="">Máy lọc nước Kangaroo Hydrogen KG100HC vỏ tủ VTU</a>
+                        <div style="max-height: 224px;"
+                            class="d-flex flex-column justify-content-center align-items-center">
+                            <a style="text-align: center; font-size: 13px; font-weight: bold" href="">Máy lọc nước
+                                Kangaroo Hydrogen KG100HC vỏ tủ VTU</a>
                             <a href="">
                                 <img style="height: 134px;" src="./images/sanpham1.jpg" alt="">
                             </a>
@@ -575,8 +581,10 @@
                         </div>
                     </div>
                     <div class="col-4 d-flex flex-column">
-                        <div style="max-height: 224px;"  class="d-flex flex-column justify-content-center align-items-center">
-                            <a style="text-align: center; font-size: 13px; font-weight: bold" href="">Máy lọc nước Kangaroo Hydrogen KG100HC vỏ tủ VTU</a>
+                        <div style="max-height: 224px;"
+                            class="d-flex flex-column justify-content-center align-items-center">
+                            <a style="text-align: center; font-size: 13px; font-weight: bold" href="">Máy lọc nước
+                                Kangaroo Hydrogen KG100HC vỏ tủ VTU</a>
                             <a href="">
                                 <img style="height: 134px;" src="./images/sanpham1.jpg" alt="">
                             </a>
@@ -601,6 +609,264 @@
         </div>
     </div>
 
+    <div class="container-fluid maxwidth">
+        <div class="d-flex justify-content-center align-items-center my-5">
+            <span style="font-weight: bold">Giới thiệu www.KangarooHanoi.vn</span>
+        </div>
+        <div>
+            <p>
+                www.KangarooHanoi.vn hiện đang dẫn đầu thị trường về phân phối trực tuyến các sản phẩm thương hiệu
+                Kangaroo.
+                Chúng tôi liên tục mở rộng liên kết và hợp tác với các Showroom Kangaroo trên địa bàn Hà Nội để phục vụ
+                khách hàng được tốt nhất. </p>
+            <p>
+                Quý khách có thể đặt mua hàng trực tuyến hoặc đặt mua hàng qua số điện thoại liên hệ 0933.58.4004 -
+                0915.48.4004 - 0969.48.4004. Kangaroo Hà Nội sẽ tiếp nhận và xử lý đơn hàng, sau đó đội ngũ kỹ thuật
+                trực
+                tiếp đến giao hàng, lắp đặt và thanh toán tại nhà Quý khách.</p>
+            <p>
+                Quý khách có nhu cầu trải nghiệm các sản phẩm trưng bày tại Showroom Kangaroo trước khi mua hàng. Quý
+                khách
+                có thể trực tiếp đến các chuỗi Showroom liên kết của Kangaroo Hà Nội và thực hiện các bước mua hàng sau.
+            </p>
+            <p>1. Đặt mua hàng trước qua hệ thống www.KangarooHanoi.vn hoặc mua hàng qua số Hotline: 0933.58.4004 -
+                0915.48.4004 - 0969.48.4004 Quý khách sẽ được nhận mã đơn hàng do nhân viên Sale online cung cấp.</p>
+            <p>2. Quý khách đến các điểm Showroom Kangaroo liên kết với chúng tôi phía dưới, cung cấp mã đơn hàng để
+                được
+                phục vụ theo chính sách giá và chương trình khuyến mại của kangaroohanoi.vn. (Quý khách mua hàng trực
+                tiếp
+                tại Showroom sẽ theo chính sách giá riêng của mỗi Showroom).</p>
+            <p>
+                Trân trọng cảm ơn quý khách hàng !
+            </p>
+            <div class="d-flex justify-content-start align-items-center">
+                <span>Chia sẻ: </span>
+                <a href="#">
+                    <img src="./images/fb.jpg" alt="">
+                </a>
+                <a href="#">
+                    <img src="./images/fb.jpg" alt="">
+                </a>
+                <a href="#">
+                    <img src="./images/fb.jpg" alt="">
+                </a>
+            </div>
+            <div class="my-4" style="text-align: center">
+                <span>www.KangarooHanoi.vn - Nhà phân phối chính hãng sản phẩm của Tập đoàn Kangaroo</span>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid maxwidth d-flex">
+        <div class="d-flex justify-content-center align-items-center flex-column">
+            <span>GIẤY CHỨNG NHẬN NHÀ PHÂN PHỐI CHÍNH HÃNG</span>
+            <div class="d-flex justify-content-center align-items-center">
+                <img style="width: 34%" src="./images/bangkhen1.jpg" alt="">
+                <img style="width: 36%" src="./images/bangkhen2.jpg" alt="">
+            </div>
+        </div>
+        <div class="d-flex justify-content-center align-items-center flex-column">
+            <span>GIẢI THƯỞNG DANH HIỆU VÀNG DOANH SỐ NĂM 2015
+            </span>
+            <div class="d-flex w-100 flex-fill justify-content-start align-items-center flex-column">
+                <img style="width: 65%" src="./images/bangkhen3.jpg" alt="">
+            </div>
+        </div>
+
+
+    </div>
+    <div class="container-fluid maxwidth">
+        <div>
+            <span>Danh sách chuỗi Showroom liên kết</span>
+        </div>
+        <div class="d-flex justify-content-around align-items-center">
+            <div>
+                <div class="d-flex justify-content-center align-items-center">
+                    <div class="d-flex flex-column justify-content-between align-items-center mr-4">
+                        <a href="">
+                            <img style="height: 60px; width: 70px" src="./images/footerimg1.jpg" alt="">
+                        </a>
+                        <a style="font-size: 14px;" href="">
+                            Xem bản đồ
+                        </a>
+                    </div>
+                    <div style="line-height: 15px; font-size: 11px" class="d-flex flex-column justify-content-start ">
+                        <p style="font-weight: bold">TỔNG KHO KANGAROO HÀ NỘI</p>
+                        <p>30 Trần Đại Nghĩa - Hai Bà trưng - Hà Nội</p>
+                        <p>Hotline: 0933.58.4004 - 0915.48.4004 - 0969.484.004</p>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center align-items-center">
+                        <div class="d-flex flex-column justify-content-between align-items-center">
+                            <a href="">
+                                <img style="height: 60px; width: 70px" src="./images/footerimg1.jpg" alt="">
+                            </a>
+                            <a style="font-size: 14px;" href="">
+                                Xem bản đồ
+                            </a>
+                        </div>
+                        <div style="line-height: 15px; font-size: 11px" class="d-flex flex-column justify-content-start ">
+                            <p style="font-weight: bold">TỔNG KHO KANGAROO HÀ NỘI</p>
+                            <p>30 Trần Đại Nghĩa - Hai Bà trưng - Hà Nội</p>
+                            <p>Hotline: 0933.58.4004 - 0915.48.4004 - 0969.484.004</p>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center">
+                            <div class="d-flex flex-column justify-content-between align-items-center">
+                                <a href="">
+                                    <img style="height: 60px; width: 70px" src="./images/footerimg1.jpg" alt="">
+                                </a>
+                                <a style="font-size: 14px;" href="">
+                                    Xem bản đồ
+                                </a>
+                            </div>
+                            <div style="line-height: 15px; font-size: 11px" class="d-flex flex-column justify-content-start ">
+                                <p style="font-weight: bold">TỔNG KHO KANGAROO HÀ NỘI</p>
+                                <p>30 Trần Đại Nghĩa - Hai Bà trưng - Hà Nội</p>
+                                <p>Hotline: 0933.58.4004 - 0915.48.4004 - 0969.484.004</p>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center">
+                                <div class="d-flex flex-column justify-content-between align-items-center">
+                                    <a href="">
+                                        <img style="height: 60px; width: 70px" src="./images/footerimg1.jpg" alt="">
+                                    </a>
+                                    <a style="font-size: 14px;" href="">
+                                        Xem bản đồ
+                                    </a>
+                                </div>
+                                <div style="line-height: 15px; font-size: 11px" class="d-flex flex-column justify-content-start ">
+                                    <p style="font-weight: bold">TỔNG KHO KANGAROO HÀ NỘI</p>
+                                    <p>30 Trần Đại Nghĩa - Hai Bà trưng - Hà Nội</p>
+                                    <p>Hotline: 0933.58.4004 - 0915.48.4004 - 0969.484.004</p>
+                                </div>
+                            </div>
+            </div>
+            <div>
+                    <div class="d-flex justify-content-center align-items-center">
+                            <div class="d-flex flex-column justify-content-between align-items-center">
+                                <a href="">
+                                    <img style="height: 60px; width: 70px" src="./images/footerimg1.jpg" alt="">
+                                </a>
+                                <a style="font-size: 14px;" href="">
+                                    Xem bản đồ
+                                </a>
+                            </div>
+                            <div style="line-height: 15px; font-size: 11px" class="d-flex flex-column justify-content-start ">
+                                <p style="font-weight: bold">TỔNG KHO KANGAROO HÀ NỘI</p>
+                                <p>30 Trần Đại Nghĩa - Hai Bà trưng - Hà Nội</p>
+                                <p>Hotline: 0933.58.4004 - 0915.48.4004 - 0969.484.004</p>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center">
+                                <div class="d-flex flex-column justify-content-between align-items-center">
+                                    <a href="">
+                                        <img style="height: 60px; width: 70px" src="./images/footerimg1.jpg" alt="">
+                                    </a>
+                                    <a style="font-size: 14px;" href="">
+                                        Xem bản đồ
+                                    </a>
+                                </div>
+                                <div style="line-height: 15px; font-size: 11px" class="d-flex flex-column justify-content-start ">
+                                    <p style="font-weight: bold">TỔNG KHO KANGAROO HÀ NỘI</p>
+                                    <p>30 Trần Đại Nghĩa - Hai Bà trưng - Hà Nội</p>
+                                    <p>Hotline: 0933.58.4004 - 0915.48.4004 - 0969.484.004</p>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-center align-items-center">
+                                    <div class="d-flex flex-column justify-content-between align-items-center">
+                                        <a href="">
+                                            <img style="height: 60px; width: 70px" src="./images/footerimg1.jpg" alt="">
+                                        </a>
+                                        <a style="font-size: 14px;" href="">
+                                            Xem bản đồ
+                                        </a>
+                                    </div>
+                                    <div style="line-height: 15px; font-size: 11px" class="d-flex flex-column justify-content-start ">
+                                        <p style="font-weight: bold">TỔNG KHO KANGAROO HÀ NỘI</p>
+                                        <p>30 Trần Đại Nghĩa - Hai Bà trưng - Hà Nội</p>
+                                        <p>Hotline: 0933.58.4004 - 0915.48.4004 - 0969.484.004</p>
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-center align-items-center">
+                                        <div class="d-flex flex-column justify-content-between align-items-center">
+                                            <a href="">
+                                                <img style="height: 60px; width: 70px" src="./images/footerimg1.jpg" alt="">
+                                            </a>
+                                            <a style="font-size: 14px;" href="">
+                                                Xem bản đồ
+                                            </a>
+                                        </div>
+                                        <div style="line-height: 15px; font-size: 11px" class="d-flex flex-column justify-content-start ">
+                                            <p style="font-weight: bold">TỔNG KHO KANGAROO HÀ NỘI</p>
+                                            <p>30 Trần Đại Nghĩa - Hai Bà trưng - Hà Nội</p>
+                                            <p>Hotline: 0933.58.4004 - 0915.48.4004 - 0969.484.004</p>
+                                        </div>
+                                    </div>
+
+            </div>
+        </div>
+    </div>
+<div style="background: #333; color: white;" class="container-fluid maxwidth d-flex justify-content-between align-items-center">
+    <div class="row">
+            <div class="col-3 d-flex flex-column">
+                    <a href="">
+                        <img src="./images/footer_logo1.png" alt="">
+                    </a>
+                    <span>Nhà phân phối chính thức các sản phẩm chính hãng của tập đoàn Kangaroo</span>
+                    <a href="">
+                        <img src="./images/footer_logo2.png" alt="">
+                    </a>
+                </div>
+                <div class="col-3">
+                    <span>GIỚI THIỆU</span>
+                    <ul>
+                        <li>
+                            <a href="">Về chúng tôi</a>
+                        </li>
+                        <li>
+                            <a href="">Hình thức mua hàng</a>
+                        </li>
+                        <li>
+                            <a href="">Hình thức thanh toán</a>
+                        </li>
+                        <li>
+                            <a href="">Chính sách bảo mật</a>
+                        </li>
+                        <li>
+                            <a href="">Tư vấn</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-3">
+                        <span>GIỚI THIỆU</span>
+                        <ul>
+                            <li>
+                                <a href="">Về chúng tôi</a>
+                            </li>
+                            <li>
+                                <a href="">Hình thức mua hàng</a>
+                            </li>
+                            <li>
+                                <a href="">Hình thức thanh toán</a>
+                            </li>
+                            <li>
+                                <a href="">Chính sách bảo mật</a>
+                            </li>
+                            <li>
+                                <a href="">Tư vấn</a>
+                            </li>
+                        </ul>
+                </div>
+                <div class="col-3">
+                        <span>GIỚI THIỆU</span><br>
+                        <a href="#">Số 1 Nguyễn Xiển, Thanh Xuân, Hà Nội</a><br>
+                        <a href="#">CSKH: 0981.926.011 - 0914.666.512</a><br>
+                        <a href="#">lienhe@kangaroohanoi.vn</a><br>
+                        <span>Giấy chứng nhận đăng ký doanh nghiệp số 010 6411 810 do Sở kế hoạch và Đầu tư Thành phố Hà Nội cấp ngày 06/01/2014</span>
+                </div>
+    </div>
+</div>
 
 
 
